Добавил добавление лота и создал БД

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             
                 <ul class="header-item">
-                    <li class = "add-number"><a href =  "nothing.html" class = "nav-button">Добавить номер</a></li>
+                    <li class = "add-number"><a href =  "add.html" class = "nav-button">Добавить номер</a></li>
                     <li class = "register"><a href = "sign-up.html" class = "nav-button">Зарегистрироваться</a></li>
                     <li class = "auto"><a href = "login.html" class = "nav-button">Авторизоваться</a></li>
                 </ul>
